Hopefully fixed scrollability on mobile
pls.

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html {
 	overflow-y:scroll;
 	margin:0;
 	height:100%;
+
 }
 
 body {
@@ -413,6 +414,8 @@ article:not(:first-child){
 	flex: 0 0 25em;
 	align-items:center;
 	flex-direction:column;
+	max-height:100vh;
+	overflow: auto !important;
 	
 }
 
